Bug 444170 - always start with "summary" => last component displayed at starting
Summary: always start with "summary" => last component displayed at starting
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: summary (other bugs)
Version First Reported In: 5.18.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-21 08:14 UTC by Philippe ROUBACH
Modified: 2021-10-22 14:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2021-10-21 08:14:36 UTC
SUMMARY


STEPS TO REPRODUCE
1. select in kontact settings the option "always start with "summary""
2. 
3. 

OBSERVED RESULT

if when quitting kontact kmail or any of the external components is displayed then 
- when launching kontact then kmail is displayed and not "summary"
- if you read the option "always start with ..." then the setting of this option has changed to "kmail"!

EXPECTED RESULT

if I choose to display "summary" at launching then at launching "summary" is displayed

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.23.1
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
kde gears 21.08.2

ADDITIONAL INFORMATION

This occurred when in one time I updated kde to plasma 5.23.0, kde frameworks 5.87.0, kde gears 21.08.2 (14/10/2021).
Comment 1 gjditchfield 2021-10-21 16:52:17 UTC
I have the opposite problem: the checkbox in front of "always start with plugin" is obeyed, but when it is checked, Kontact always starts with the Summary regardless of the plugin I select.

My configuration seems to be stored in .config/kontactrc, in ActivePlugin and ForceStartupPlugin properties.
Comment 2 Bug Janitor Service 2021-10-21 19:26:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kontact/-/merge_requests/9
Comment 3 Alexander Lohnau 2021-10-21 20:45:01 UTC
Git commit 26db2686f1ee5aece8bd77fe4da63049fb508fbf by Alexander Lohnau.
Committed on 21/10/2021 at 19:53.
Pushed by alex into branch 'master'.

Fix showing of kcm_kontact config module

M  +1    -1    src/CMakeLists.txt
M  +3    -0    src/mainwindow.cpp

https://invent.kde.org/pim/kontact/commit/26db2686f1ee5aece8bd77fe4da63049fb508fbf
Comment 4 Alexander Lohnau 2021-10-21 20:45:09 UTC
Git commit aa9886e186bf18a5b8fed3f01c0c3d414b252491 by Alexander Lohnau.
Committed on 21/10/2021 at 19:53.
Pushed by alex into branch 'master'.

kcmkontact: Fix writing of configured startup module

M  +1    -0    src/kcmkontact.cpp

https://invent.kde.org/pim/kontact/commit/aa9886e186bf18a5b8fed3f01c0c3d414b252491
Comment 5 Alexander Lohnau 2021-10-22 14:36:29 UTC
Git commit 03c663e2a8cdfa2caac2202192ff82bdf79e84ac by Alexander Lohnau.
Committed on 22/10/2021 at 14:36.
Pushed by alex into branch 'release/21.08'.

kcmkontact: Fix writing of configured startup module


(cherry picked from commit aa9886e186bf18a5b8fed3f01c0c3d414b252491)

M  +1    -0    src/kcmkontact.cpp

https://invent.kde.org/pim/kontact/commit/03c663e2a8cdfa2caac2202192ff82bdf79e84ac