kcmkontact: Fix writing of configured startup module

BUG: 444170


(cherry picked from commit aa9886e186bf18a5b8fed3f01c0c3d414b252491)