src/kcmkontact.cpp
@@ -104,6 +104,7 @@ void KcmKontact::save()
 {
     const KPluginMetaData plugin = mPluginList.at(mPluginCombo->currentIndex());
     Prefs::self()->setActivePlugin(plugin.pluginId());
+    Prefs::self()->setForcedStartupPlugin(plugin.pluginId());
     KCModule::save();
 }
 
